force-app/main/default/objects/aecm__Capability_Pain_Point__c/aecm__Capability_Pain_Point__c.object-meta.xml
<CustomObject>
    <description>A container for capturing business or IT pain points in a given area of capability. In general pain points should point to a single solution, however a many-to-many relationship is also defined.</description>
    <label>Capability Pain Point</label>
    <nameField>
        <label>Capability Pain Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capability Pain Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>