force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Alignment_Strategy__c.field-meta.xml
<CustomField>
    <fullName>aecm__Alignment_Strategy__c</fullName>
    <inlineHelpText>Degree of overall alignment with the company objectives, reusability and simplification</inlineHelpText>
    <label>Alignment Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Planned &amp; Tactical</fullName>
            </value>
            <value>
                <fullName>Planned &amp; Predicted</fullName>
            </value>
            <value>
                <fullName>Planned &amp; Proactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>