force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Alignment_Strategy_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Alignment_Strategy_Score__c</fullName>
    <formula>CASE(  aecm__Alignment_Strategy__c  , &quot;Planned &amp; Proactive&quot;, 5, &quot;Planned &amp; Predicted&quot;, 4,&quot;Planned &amp; Tactical&quot;,3,&quot;Tactocal&quot;,2,&quot;Reactive&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>this formula is used with other prioritization attributes to create a overall prioritization score</inlineHelpText>
    <label>Alignment Strategy Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>