force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Architecture_Component__c.field-meta.xml
<CustomField>
    <fullName>aecm__Architecture_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary platform or business system that this pain point is related to. When provided, this enables reporting pain points by system.</inlineHelpText>
    <label>Architecture Component</label>
    <referenceTo>aecm__Architecture_Component__c</referenceTo>
    <relationshipLabel>Capability Pain Points</relationshipLabel>
    <relationshipName>Capability_Pain_Points</relationshipName>
    <type>Lookup</type>
</CustomField>