force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>aecm__Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Business stakeholder who reported or owns this pain point.</inlineHelpText>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capability_Pain_Points</relationshipName>
    <type>Lookup</type>
</CustomField>