force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Capability__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Capability this pain point is related to. Pain points may not exists across multiple capabilities.</inlineHelpText>
    <label>Capability</label>
    <referenceTo>aecm__Capability__c</referenceTo>
    <relationshipLabel>Capability Pain Points</relationshipLabel>
    <relationshipName>Capability_Pain_Points</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>