force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>aecm__Cost_Value__c</fullName>
    <inlineHelpText>This provides a measure of the cost of ownership to functional value for a Pain Point. It is assumed that a solution design or designs will be needed for this Pain Point.</inlineHelpText>
    <label>Cost Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Cost - Low Value</fullName>
            </value>
            <value>
                <fullName>Low Cost - Moderate Value</fullName>
            </value>
            <value>
                <fullName>Low Cost - High Value</fullName>
            </value>
            <value>
                <fullName>Moderate Cost - Low Value</fullName>
            </value>
            <value>
                <fullName>Moderate Cost - Moderate Value</fullName>
            </value>
            <value>
                <fullName>Moderate Cost - High Value</fullName>
            </value>
            <value>
                <fullName>High Cost - Low Value</fullName>
            </value>
            <value>
                <fullName>High Cost - Moderate Value</fullName>
            </value>
            <value>
                <fullName>High Cost - High Value</fullName>
            </value>
            <value>
                <fullName>Cost - Unknown Value</fullName>
                <isActive>false</isActive>
                <label>Cost - Unknown Value</label>
            </value>
            <value>
                <fullName>Marginal Cost - High Value</fullName>
                <isActive>false</isActive>
                <label>Marginal Cost - High Value</label>
            </value>
            <value>
                <fullName>Median Cost - Median Value</fullName>
                <isActive>false</isActive>
                <label>Median Cost - Median Value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>