force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Cost_Value_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Cost_Value_Score__c</fullName>
    <formula>CASE( aecm__Cost_Value__c , &quot;Low Cost - High Value&quot;,9,&quot;Moderate Cost - High Value&quot;,8,&quot;Low Cost - Moderate Value&quot;,7,&quot;High Cost - High Value&quot;,6,&quot;Moderate Cost - Moderate Value&quot;,5,&quot;High Cost - Moderate Value&quot;,4,&quot;Low Cost - Low Value&quot;,3,&quot;Moderate Cost - Low Value&quot;,2,&quot;High Cost - Low Value&quot;,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Value Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>