force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Entity__c.field-meta.xml
<CustomField>
    <fullName>aecm__Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>aecm__Entity__c</referenceTo>
    <relationshipLabel>Capability Pain Points</relationshipLabel>
    <relationshipName>Capability_Pain_Points</relationshipName>
    <type>Lookup</type>
</CustomField>