force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Impact__c.field-meta.xml
<CustomField>
    <fullName>aecm__Impact__c</fullName>
    <inlineHelpText>Number of end stakeholders/users tht will benefit and/or use the enhancement or customization</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Significant Use</fullName>
            </value>
            <value>
                <fullName>Moderate Use</fullName>
            </value>
            <value>
                <fullName>Dispersed Use</fullName>
            </value>
            <value>
                <fullName>Limited Dispersed Use</fullName>
            </value>
            <value>
                <fullName>Isolated Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>