force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Impact_Score__c</fullName>
    <formula>CASE( aecm__Impact__c , &quot;Significant Use&quot;, 5, &quot;Moderate Use&quot;, 4,&quot;Dispersed Use&quot;,3,&quot;Limited Dispersed Use&quot;,2,&quot;Isolated Use&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>