force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Operational_Contribution__c.field-meta.xml
<CustomField>
    <fullName>aecm__Operational_Contribution__c</fullName>
    <inlineHelpText>Degree of overall operational excellence contribution to the company in automation, simpliication and effectiveness</inlineHelpText>
    <label>Operational Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Marginal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>