force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Operational_Contribution_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Operational_Contribution_Score__c</fullName>
    <formula>CASE(   aecm__Operational_Contribution__c   , &quot;Significant&quot;, 5, &quot;High&quot;, 4,&quot;Low&quot;,3,&quot;Marginal&quot;,2,&quot;None&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>this formula is used with other prioritization attributes to create a overall prioritization score</inlineHelpText>
    <label>Operational Contribution Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>