force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Persona__c.field-meta.xml
<CustomField>
    <fullName>aecm__Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary persona this pain point affects the most.</inlineHelpText>
    <label>Persona</label>
    <referenceTo>aecm__Persona__c</referenceTo>
    <relationshipLabel>Capability Pain Points</relationshipLabel>
    <relationshipName>Capability_Pain_Points</relationshipName>
    <type>Lookup</type>
</CustomField>