force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Severity__c.field-meta.xml
<CustomField>
    <fullName>aecm__Severity__c</fullName>
    <inlineHelpText>Identifies the degree of disruptiveness. 1) Inconvenience - an annoyance. 2) Manageable - a workable ineffectiveness. 3) Disruptive - causing confusions. 4) Forcing Manual Processes - a non-workable ineffectiveness causing complexity and cost.</inlineHelpText>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inconvenience</fullName>
            </value>
            <value>
                <fullName>Manageable</fullName>
            </value>
            <value>
                <fullName>Disruptive</fullName>
            </value>
            <value>
                <fullName>Forcing Manual Processes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>