force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Severity_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Severity_Score__c</fullName>
    <formula>CASE( aecm__Severity__c , &quot;Inconvenience&quot;, 1, &quot;Manageable&quot;, 2,&quot;Disruptive&quot;,3,&quot;Forcing Manual Processes&quot;,4,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Severity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>