force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Short_Description__c</fullName>
    <label>Short Description</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>