force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Solution_Design__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution_Design__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to map this pain point to a single solution, otherwise use the Pain Point Solution Related list.</inlineHelpText>
    <label>DEPRECATED Solution Design</label>
    <referenceTo>aecm__Solution_Design__c</referenceTo>
    <relationshipLabel>Capability Pain Points</relationshipLabel>
    <relationshipName>Capability_Pain_Points</relationshipName>
    <type>Lookup</type>
</CustomField>