force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Status__c</fullName>
    <description>Identified the status of the pain point.</description>
    <inlineHelpText>Sets the status of the pain point. 1) Identified - PP has been reported.  2) Confirmed - by business analyst or architect. 
3) In Solution - a resolution for the PP is underway. 4) Resolved - PP has been resolved. 5) Unfounded - PP not valid.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>In Solution</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unfounded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>