force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/aecm__Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>aecm__Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capability_Pain_Points1</relationshipName>
    <type>Lookup</type>
</CustomField>