force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/YG_Capability_Area__c.field-meta.xml
<CustomField>
    <fullName>YG_Capability_Area__c</fullName>
    <formula>aecm__Capability__r.aecm__Capability_Area__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capability Area</label>
    <type>Text</type>
</CustomField>