force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/YG_Capability_Name__c.field-meta.xml
<CustomField>
    <fullName>YG_Capability_Name__c</fullName>
    <formula>aecm__Capability__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capability Name</label>
    <type>Text</type>
</CustomField>