force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/YG_Functional_Unit__c.field-meta.xml
<CustomField>
    <fullName>YG_Functional_Unit__c</fullName>
    <formula>aecm__Entity__r.aecm__Functional_Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Functional Unit</label>
    <type>Text</type>
</CustomField>