force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/YG_Geography__c.field-meta.xml
<CustomField>
    <fullName>YG_Geography__c</fullName>
    <formula>aecm__Entity__r.aecm__Geography__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geography</label>
    <type>Text</type>
</CustomField>