force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/YG_Prioritization_Value__c.field-meta.xml
<CustomField>
    <fullName>YG_Prioritization_Value__c</fullName>
    <formula>/* Weighted average as prioritization value */
((YG_Cost_Value_Score__c * 1) + (aecm__Impact_Score__c * 2) + (aecm__Severity_Score__c * 1.5)+ ( aecm__Alignment_Strategy_Score__c * 1.5)+ ( aecm__Operational_Contribution_Score__c * 1.5))/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prioritization Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>