force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/YG_Program_Metric_Primary__c.field-meta.xml
<CustomField>
    <fullName>YG_Program_Metric_Primary__c</fullName>
    <description>This indicates the primary metric impacted by solving this Pain Point</description>
    <inlineHelpText>This indicates the primary metric impacted by solving this Pain Point</inlineHelpText>
    <label>Program Metric - Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase in Leads</fullName>
            </value>
            <value>
                <fullName>Increase in Orders</fullName>
            </value>
            <value>
                <fullName>Increase in upsell / Cross-sell</fullName>
            </value>
            <value>
                <fullName>Increase in Productivity</fullName>
            </value>
            <value>
                <fullName>Decrease in Case Resolution Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>