force-app/main/default/objects/aecm__Capability_Pain_Point__c/fields/YG_Submitted_By_Title__c.field-meta.xml
<CustomField>
    <fullName>YG_Submitted_By_Title__c</fullName>
    <formula>aecm__Submitted_By__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted By Title</label>
    <type>Text</type>
</CustomField>