force-app/main/default/objects/aecm__Capability_Pain_Point__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Capability__c</columns>
    <columns>aecm__Prioritization_Value__c</columns>
    <columns>aecm__Status__c</columns>
    <columns>aecm__Business_Owner__c</columns>
    <columns>aecm__Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>