force-app/main/default/objects/aecm__Capability_Pain_Point__c/listViews/aecm__Solutions_in_Progress.listView-meta.xml
<ListView>
    <fullName>aecm__Solutions_in_Progress</fullName>
    <columns>NAME</columns>
    <columns>aecm__Capability__c</columns>
    <columns>aecm__Persona__c</columns>
    <columns>aecm__Prioritization_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved,Unfounded</value>
    </filters>
    <label>Solutions in Progress</label>
</ListView>